# nvpass

./: Cargo.toml  LICENSE  README.md
lua/nvpass/: init.lua  util.lua  vault.lua
src/: db.rs  main.rs
