[package]
name = "nvpass"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
atty = "0.2.14"
bincode2 = "2.0.1"
chacha20poly1305 = "0.10.1"
getopts = "0.2.24"
rand = "0.10.0"
rand_distr = "0.6.0"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
unicode-segmentation = "1.13.2"
zeroize = "1.8.2"
